# game

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  build.rs  deny.toml  release.toml
.github/workflows/: ci.yml  release.yml
assets/: game.ron
assets/animations/: bolt.ron  bolt.toml  player.ron  player.toml  slime.ron  slime.toml
assets/maps/: game.txt  ldtk_demo.ldtk  level_1.txt
crates/arena-content/: Cargo.toml
crates/arena-content/src/: actor.rs  ai.rs  assets.rs  combat.rs  input.rs  level.rs  lib.rs  maps.rs  prefabs.rs  spawn.rs  state.rs  systems.rs
crates/arena-content/tests/: combat.rs  plugin.rs  systems.rs
crates/game-ai/: Cargo.toml
crates/game-ai/src/: chase.rs  lib.rs  patrol.rs
crates/game-audio/: Cargo.toml
crates/game-audio/src/: lib.rs  mixer.rs
crates/game-audio/src/mixer/: callback.rs  command.rs  decode.rs  mod.rs  sound.rs  stream.rs  system.rs  voice.rs
crates/game-backend-headless/: Cargo.toml
crates/game-backend-headless/src/: lib.rs
crates/game-cli/: Cargo.toml
crates/game-cli/src/: assets.rs  lib.rs  main.rs  manifest.rs  paths.rs  process.rs  project.rs  starter_assets.rs  templates.rs
crates/game-cli/src/commands/: asset_check.rs  authoring_scan.rs  check.rs  doctor.rs  migrate_ron.rs  mod.rs  package.rs  package_sdk.rs  preview.rs  release_check.rs  validate_data.rs
crates/game-combat/: Cargo.toml
crates/game-core/: Cargo.toml
crates/game-kit/: Cargo.toml
crates/game-kit/src/: app.rs  assets.rs  bundle.rs  context.rs  data.rs  diagnostics.rs  harness.rs  helpers.rs  input.rs  lib.rs  map.rs  paths.rs  prefab.rs  system.rs
crates/game-kit/src/advanced/: mod.rs  prelude.rs  testing.rs
crates/game-kit/src/app/: debug.rs  mod.rs  plugin.rs  tests.rs  validation.rs
crates/game-kit/src/beginner/: actors.rs  animation.rs  app.rs  audio.rs  camera.rs  collections.rs  combat.rs  context.rs  custom_rules.rs  debug.rs  defaults.rs  events.rs  mod.rs  prefabs.rs  prelude.rs  rules.rs  scene.rs  spawn.rs  state.rs  testing.rs  time.rs  tuning.rs  ui.rs
crates/game-kit/src/beginner/prefabs/: area.rs  door.rs  enemy.rs  mod.rs  pickup.rs  player.rs  projectile.rs  shared.rs  spawner.rs
crates/game-kit/src/beginner/rules/: animation.rs  author.rs  checkpoints.rs  combat.rs  doors.rs  mod.rs  pickups.rs  projectiles.rs  shared.rs  spawners.rs  ui.rs  win_conditions.rs
crates/game-kit/src/data/: build.rs  defaults.rs  effects.rs  legacy.rs  legacy_ron.rs  mod.rs  model.rs  tests.rs  toml_emit.rs  toml_parse.rs  toml_schema.rs  validate.rs
crates/game-kit/src/data/tests/: mod.rs  ron_legacy.rs  toml_primary.rs
crates/game-kit/tests/: beginner_animation.rs  behavior_composition.rs  data_game_asset_dir_compat.rs  live_tuning.rs  map_flow.rs  reset_does_not_double_fire.rs  system_param_disjoint_borrows.rs  tagged_actors.rs
crates/game-map/: Cargo.toml
crates/game-map/src/: builder.rs  external.rs  ldtk.rs  lib.rs  nav.rs  object.rs  region.rs  tiled.rs  tilemap.rs  validation.rs
crates/game-map/src/fixtures/: arena_example.ron
crates/game-physics/: Cargo.toml
crates/game-physics/src/: collider.rs  collision.rs  lib.rs  movement.rs
crates/game-platform-sdl/: Cargo.toml
crates/game-platform-sdl/src/: input.rs  lib.rs  window.rs
crates/game-renderer-vulkan/: Cargo.toml  build.rs
crates/game-renderer-vulkan/shaders/: sprite.frag  sprite.vert
crates/game-renderer-vulkan/src/: assets.rs  commands.rs  context.rs  debug.rs  frame.rs  instance.rs  lib.rs  owned.rs  pipeline.rs  sprite_batch.rs  swapchain.rs  text.rs  texture.rs  texture_registry.rs  vertex.rs
crates/game-runtime/: Cargo.toml
crates/game-runtime/src/: fixed_timestep.rs  lib.rs  runner.rs
crates/game-runtime/tests/: headless_runner.rs
crates/game-starter/: Cargo.toml
crates/game-starter/src/: lib.rs
crates/simple-content/: Cargo.toml
crates/simple-content/src/: lib.rs
crates/simple-content/tests/: plugin.rs
crates/testbed-content/: Cargo.toml  README.md
crates/testbed-content/maps/: testbed.ron
crates/testbed-content/src/: actor.rs  ai.rs  assets.rs  combat.rs  input.rs  level.rs  lib.rs  maps.rs  prefabs.rs  spawn.rs  state.rs  systems.rs
crates/testbed-content/tests/: combat.rs  plugin.rs  systems.rs
docs/: ARCHITECTURE.md  advanced-content-authoring.md  api-boundary.md  architectural-improvement-roadmap.md  architecture.md  beginner-authoring-roadmap.md  beginner-authoring.md  beginner-productization-roadmap.md  content-authoring-api-roadmap.md  content-authoring.md  dead-code-audit.md  distribution-policy.md  future-editor-import.md  no-rust-package-layout.md  pre-workspace-architecture.md  release-checklist.md  renderer-lifetime.md  when-to-use-advanced-api.md
docs/cookbook/: README.md  animations.md  audio.md  bosses.md  checkpoints.md  coins-and-score.md  common-small-game-patterns.md  custom-tags-and-timers.md  damage-zones.md  dialog.md  enemy-drops.md  enemy-waves.md  gamepad.md  health-pickups.md  inventory.md  ldtk.md  live-tuning.md  menu-and-game-over.md  projectiles.md  tiled.md  title-menu.md  triggers-and-areas.md  two-levels.md  ui.md  win-conditions.md
docs/migrations/: README.md  game-ron-v1-to-v2.md  ron-to-toml.md  root-api-cleanup.md  v0.1-to-v0.2.md
docs/roadmaps/: README.md  content-engine-boundary-consolidation.md  post-1.0-api-surface-cleanup.md  post-1.0-live-data-reload.md  primary-no-rust-authoring-foundation.md
docs/setup/: linux.md  macos.md  windows.md
docs/tutorials/: 00-start-here.md  00-zero-to-demo.md  01-run-the-demo.md  02-your-first-player.md  03-add-a-map.md  04-add-an-enemy.md  05-add-combat.md  (+22 more)
examples/one-file-demo/: Cargo.toml  README.md
examples/one-file-demo/src/: main.rs
examples/tiled-demo/: Cargo.toml  README.md
examples/tiled-demo/src/: main.rs
plans/: plan.md
scripts/: first-15-minutes.sh  verify-github-release-artifacts.sh  verify-release-artifact.sh
shaders/: sprite.frag  sprite.frag.spv  sprite.vert  sprite.vert.spv  triangle.vert  triangle.vert.spv
src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+195 files in other folders)
