[package]
name = "game"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
description = "Small Rust/SDL3/Vulkan game prototype"
repository = "https://github.com/P2949/game"

[dependencies]
sdl3 = "0.18.4"
ash = "0.38"
gpu-allocator = "0.28"
glam = "0.33.1"

image = "0.25"
fontdue = "0.9"
bytemuck = { version = "1", features = ["derive"] }
crossbeam-queue = "0.3"

anyhow = "1"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
walkdir = "2"

[features]
# CI uses the sdl3 crate's pinned source package so the workflow does not depend
# on whether the runner image happens to ship a `libsdl3-dev` apt package.
ci-build-sdl3 = ["sdl3/build-from-source"]

[profile.release]
# Production builds: optimize across the whole crate graph. codegen-units = 1
# trades build time for a faster binary, which is the right call for shipping.
lto = "thin"
codegen-units = 1
