[workspace]
resolver = "3"
members = [
    "crates/game-audio",
    "crates/game-combat",
    "crates/game-core",
    "crates/game-ai",
    "crates/game-map",
    "crates/game-physics",
    "crates/game-platform-sdl",
    "crates/game-renderer-vulkan",
    "crates/game-runtime",
    "crates/arena-content",
    "crates/testbed-content",
    "bin/game",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
license = "GPL-3.0-or-later"
repository = "https://github.com/P2949/game"

[workspace.dependencies]
anyhow = "1"
ash = "0.38"
bytemuck = { version = "1", features = ["derive"] }
crossbeam-queue = "0.3"
env_logger = "0.11"
fontdue = "0.9"
glam = "0.33.1"
gpu-allocator = "0.28"
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
ron = "0.12.1"
sdl3 = "0.18.4"
serde = { version = "1", features = ["derive"] }
walkdir = "2"

[profile.release]
# Production builds: optimize across the whole crate graph. codegen-units = 1
# trades build time for a faster binary, which is the right call for shipping.
lto = "thin"
codegen-units = 1
