[workspace]
resolver = "3"
default-members = ["bin/game", "bin/game-player"]
members = [
    "crates/game-audio",
    "crates/game-backend-headless",
    "crates/game-combat",
    "crates/game-core",
    "crates/game-ai",
    "crates/game-map",
    "crates/game-physics",
    "crates/game-kit",
    "crates/game-platform-sdl",
    "crates/game-renderer-vulkan",
    "crates/game-runtime",
    "crates/game-starter",
    "crates/game-cli",
    "crates/arena-content",
    "crates/testbed-content",
    "crates/simple-content",
    "examples/animation-demo",
    "examples/audio-demo",
    "examples/beginner-mini-game",
    "examples/coin-collector",
    "examples/data-driven-events-demo",
    "examples/data-driven-full-demo",
    "examples/data-driven-projectiles-demo",
    "examples/data-driven-tiled-demo",
    "examples/data-driven-waves-demo",
    "examples/menu-game-over",
    "examples/no-rust-shapes-demo",
    "examples/win-condition-demo",
    "examples/enemy-drops-demo",
    "examples/events-demo",
    "examples/health-pickup-demo",
    "examples/checkpoint-demo",
    "examples/boss-demo",
    "examples/dialog-demo",
    "examples/inventory-demo",
    "examples/title-menu-demo",
    "examples/damage-zone-demo",
    "examples/ldtk-demo",
    "examples/tiled-demo",
    "examples/one-file-demo",
    "examples/projectile-demo",
    "examples/projectile-hit-demo",
    "examples/score-gate-demo",
    "examples/script-like-custom-rules",
    "examples/timer-spawn-demo",
    "examples/two-level-demo",
    "examples/trigger-area-demo",
    "examples/waves-demo",
    "xtask",
    "bin/game",
    "bin/game-player",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
license = "GPL-3.0-or-later"
repository = "https://github.com/P2949/game"
description = "A beginner-friendly Rust 2D game framework and toolkit"

[workspace.dependencies]
anyhow = "1"
ash = "0.38"
bytemuck = { version = "1", features = ["derive"] }
crossbeam-queue = "0.3"
env_logger = "0.11"
fontdue = "0.9"
glam = "0.33.1"
gpu-allocator = "0.28"
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
ron = "0.12.1"
sdl3 = "0.18.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
walkdir = "2"

[profile.release]
# Production builds: optimize across the whole crate graph. codegen-units = 1
# trades build time for a faster binary, which is the right call for shipping.
lto = "thin"
codegen-units = 1
