[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
game-cli = { version = "0.1.0", path = "../crates/game-cli" }

[features]
ci-build-sdl3 = ["game-cli/ci-build-sdl3"]
