[package]
name = "arena-content"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
glam.workspace = true
game-core = { version = "0.1.0", path = "../game-core" }
game-ai = { version = "0.1.0", path = "../game-ai" }
game-combat = { version = "0.1.0", path = "../game-combat" }
game-map = { version = "0.1.0", path = "../game-map" }
game-physics = { version = "0.1.0", path = "../game-physics" }
