[package]
name = "game-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
glam.workspace = true
game-core = { version = "0.1.0", path = "../game-core" }
game-map = { version = "0.1.0", path = "../game-map" }
