[package]
name = "game-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone beginner project tools for the game framework"

[lib]
name = "game_cli"
path = "src/lib.rs"

[[bin]]
name = "game-dev"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
fontdue.workspace = true
image.workspace = true
serde_json.workspace = true
toml.workspace = true
walkdir.workspace = true
game-audio = { version = "0.1.0", path = "../game-audio" }
game-kit = { version = "0.1.0", path = "../game-kit" }
game-map = { version = "0.1.0", path = "../game-map" }

[features]
ci-build-sdl3 = ["game-audio/ci-build-sdl3"]
ogg = ["game-audio/ogg"]
mp3 = ["game-audio/mp3"]
