[package]
name = "game-kit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# The content-authoring facade. Content crates depend on this crate (plus anyhow
# and glam) and nothing else. It wraps the engine-neutral gameplay crates behind
# a friendly authoring API and MUST NOT depend on the runtime/backend crates
# (game-runtime, game-renderer-vulkan, game-platform-sdl, game-audio) or their
# transitive backends (ash, sdl3, gpu-allocator).
[dependencies]
anyhow.workspace = true
glam.workspace = true
game-core = { version = "0.1.0", path = "../game-core" }
game-map = { version = "0.1.0", path = "../game-map" }
game-ai = { version = "0.1.0", path = "../game-ai" }
game-combat = { version = "0.1.0", path = "../game-combat" }
game-physics = { version = "0.1.0", path = "../game-physics" }
