[package]
name = "game-map"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
glam.workspace = true
ron.workspace = true
serde.workspace = true
game-core = { path = "../game-core" }
