[package]
name = "game-map"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
glam.workspace = true
ron.workspace = true
serde.workspace = true
serde_json.workspace = true
game-core = { version = "0.1.0", path = "../game-core" }
