[package]
name = "game-renderer-vulkan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
ash.workspace = true
bytemuck.workspace = true
fontdue.workspace = true
glam.workspace = true
gpu-allocator.workspace = true
image.workspace = true
log.workspace = true
sdl3.workspace = true
game-core = { path = "../game-core" }

[build-dependencies]
walkdir.workspace = true
