[package]
name = "game-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
glam.workspace = true
log.workspace = true
game-audio = { path = "../game-audio" }
game-core = { path = "../game-core" }
game-platform-sdl = { path = "../game-platform-sdl" }
game-renderer-vulkan = { path = "../game-renderer-vulkan" }
