[package]
name = "game-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
glam.workspace = true
log.workspace = true
game-audio = { version = "0.1.0", path = "../game-audio" }
game-core = { version = "0.1.0", path = "../game-core" }
game-platform-sdl = { version = "0.1.0", path = "../game-platform-sdl" }
game-renderer-vulkan = { version = "0.1.0", path = "../game-renderer-vulkan" }

[features]
ogg = ["game-audio/ogg"]
mp3 = ["game-audio/mp3"]
