[package]
name = "game-starter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
game-kit = { version = "0.1.0", path = "../game-kit" }
game-runtime = { version = "0.1.0", path = "../game-runtime" }

[features]
ogg = ["game-runtime/ogg"]
