[package]
name = "testbed-content"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Second demo content. It depends on the game-kit authoring facade only — never
# on game-runtime, game-renderer-vulkan, game-audio, game-platform-sdl, or
# arena-content.
[dependencies]
anyhow.workspace = true
glam.workspace = true
game-kit = { version = "0.1.0", path = "../game-kit" }
