[package]
name = "one-file-demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
env_logger.workspace = true
game-kit = { version = "0.1.0", path = "../../crates/game-kit" }
game-runtime = { version = "0.1.0", path = "../../crates/game-runtime" }
